tests/fixtures/pass/method-array-param.php
<?php

namespace Chaozhuo\Helper;

use winwin\winner\fixtures\Bar;

class Foo
{
    /**
     * @param (Bar|null)[] $bar
     */
    public function foo($bar)
    {
    }
}
