tests/fixtures/fail/annotation-value-class-not-found2.php
<?php

declare(strict_types=1);

namespace Chaozhuo\Helper;

use winwin\winner\fixtures\Bar;
use winwin\winner\fixtures\Foo;

/**
 * @Bar({ Foo::class : Fo::class })
 */
class Foo
{
}
